final touches on styling

--- a/All_Spice.client/index.html
+++ b/All_Spice.client/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <link rel="icon" href="https://bcw.blob.core.windows.net/public/img/9977764104160066" />
+  <link rel="icon" href="https://media.istockphoto.com/vectors/restaurant-icon-vector-id1038356020?k=20&m=1038356020&s=612x612&w=0&h=Y1okNvzppPix48prPDockvquxIT4jXHWLi5YJ9nO-FQ=" />
   <title>
-    All_Spice.client
+    All Spice
   </title>
 </head>
 
@@ -20,5 +20,6 @@
   <!-- built files will be auto injected -->
   <script type="module" src="./src/main.js"></script>
 </body>
+
 
 </html>
