--- a/All_Spice/wwwroot/index.html
+++ b/All_Spice/wwwroot/index.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All_Spice</title>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <link rel="icon" href="https://media.istockphoto.com/vectors/restaurant-icon-vector-id1038356020?k=20&m=1038356020&s=612x612&w=0&h=Y1okNvzppPix48prPDockvquxIT4jXHWLi5YJ9nO-FQ=" />
+  <title>
+    All Spice
+  </title>
+  <script type="module" crossorigin src="/assets/index.873b5cfc.js"></script>
+  <link rel="modulepreload" href="/assets/vendor.4f835de4.js">
+  <link rel="stylesheet" href="/assets/index.ed3382bf.css">
 </head>
+
 <body>
-    <h1>All_Spice Initialized</h1>
-    <p>Check out the api swagger docs <a href="/swagger">here</a> </p>
+  <noscript>
+    <strong>We're sorry but All_Spice.client doesn't work properly without JavaScript
+      enabled. Please enable it to continue.</strong>
+  </noscript>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+  
 </body>
+
+
 </html>
